agregado de etiqueta h1 para prueba de git

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         </div>
         
     </footer>
+    <h1>ETIQUETA DE PRUEBA PARA COMPROBAR EL FUNCIONAMIENTO DE GIT.</h1>
 
     
 </body>
