implementacion de bootstrap en index

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -52,7 +52,7 @@
     
     <main>
         <section class="contenedor">
-            <div class="contenedor__div contenedor__imagen" >
+            <div class="jumbotron" >
                 <label class="contenedor__texto">DEJAMOS NUESTRA IMPRONTA EN CADA ENVASE.</label>
             </div>       
             <div class="contenedor__div contenedor__subtitulo">
