--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                         Productos
                     </a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">PET</a>
-                        <a class="dropdown-item" href="#">PEAD</a>
-                        <a class="dropdown-item" href="#">PVC</a>
-                        <a class="dropdown-item" href="#">PP</a>
+                        <a class="dropdown-item" href="#PET">PET</a>
+                        <a class="dropdown-item" href="#PEAD">PEAD</a>
+                        <a class="dropdown-item" href="#PVC">PVC</a>
+                        <a class="dropdown-item" href="#PP">PP</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -51,6 +51,9 @@
 
         </nav>
     </header>
+
+      <!-- header - fin -->
+
 
     <main>
 
